--- a/src/static/qd/css/module.scss
+++ b/src/static/qd/css/module.scss
@@ -918,7 +918,7 @@ html:root {
 			cursor: default;
 			&:hover {
 				background: none;
-				border: none;
+				border: 1px solid white;
 			}
 		}
 		.lbf-pagination-jump {
