--- a/src/views/finish.qidian.com/index.html
+++ b/src/views/finish.qidian.com/index.html
@@ -40,12 +40,14 @@
     <% include ../layout/header2.html %>
     <%
     /*
-    设置主导航高亮navHighLight = 3
-    首页无高亮（首页没设置此变量）
-    1:全部作品
-    2:排行
-    3:完本
-    4:免费
+        设置主导航高亮navHighLight = 3
+        0:首页
+        1:全部作品
+        2:排行
+        3:完本
+        4:免费
+        5:频道页
+        6:搜索页
     */
     var navHighLight = 3;
     %>
