--- a/src/views/all.qidian.com/index.html
+++ b/src/views/all.qidian.com/index.html
@@ -41,11 +41,13 @@
     <%
         /*
             设置主导航高亮navHighLight = 1
-            首页无高亮（首页没设置此变量）
+            0:首页
             1:全部作品
             2:排行
             3:完本
             4:免费
+            5:频道页
+            6:搜索页
         */
         var navHighLight = 1;
     %>
