--- a/src/views/error.html
+++ b/src/views/error.html
@@ -37,10 +37,17 @@
 <div class="wrap">
     <%
         /*
-            设置主导航高亮navHighLight = 任意值  0是首页
-            非首页的页脚输出的模板不同
+            设置主导航高亮navHighLight = 0
+            0:（固定导航条需要有搜索）
+            1:全部作品
+            2:排行
+            3:完本
+            4:免费
+            5:频道页
+            6:搜索页
+            100:其他
         */
-        var navHighLight = 2;
+        var navHighLight = 0;
     %>
     <!-- start 固定导航条 样式和首页不同，非跟随页面滚动 -->
     <% include component/fixed_top_nav.html %>
