--- a/src/views/www.yuewen.com/app.html
+++ b/src/views/www.yuewen.com/app.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 <meta name="format-detection"  content="telephone=no" />
 <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/yuewen.css">
+<link rel="stylesheet" href="<%= staticConf.staticPath %>/css/demo1.css">
 <script>
 (function(doc, win) {
     // 屏幕宽度
